--- a/jbresume.html
+++ b/jbresume.html
@@ -3,17 +3,18 @@
 <p>johnbrz@gmail.com</p>
 <p>310-561-4509</p>
 <p>650 Edith Way, Long Beach, CA 90807</p>
+<p>johnbrz.com</p>
 <h3 id="summary">Summary:</h3>
 <ul>
-<li>Four years professional experience developing LAMP applications, managing Apache servers, and working with and within modern CMS frameworks;</li>
+<li>Six years professional experience developing LAMP applications, managing Apache servers, and working with and within modern CMS frameworks;</li>
 <li>Excellent ability to communicate with management, engineering, and customers;</li>
 <li>Intelligent, curious, and enthusiastic problem-solver;</li>
 <li>Friendly disposition, and overall great co-worker and addition to any office environment.</li>
 </ul>
 <h2 id="experience">Experience:</h2>
-<h3 id="ecyberdeck-champions-cup-softball-tournament">eCyberDeck / Champions Cup Softball Tournament</h3>
-<h3 id="contract-web-developer">Contract Web Developer</h3>
-<h3 id="november-2012---june-2013-august-2015---present">November 2012 - June 2013 , August 2015 - Present</h3>
+<h3 id="yuccasoft">YuccaSoft</h3>
+<h3 id="senior-web-developer">Senior Web Developer</h3>
+<h3 id="january-2012---june-2013-august-2015---present">January 2012 - June 2013 , August 2015 - Present</h3>
 <ul>
 <li>Coded functionality for multiple web applications in Javascript, PHP, XML, and the ModX Content Management System.</li>
 <li>Designed, coded, and maintained a single-page web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel.</li>
