--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,7 @@
 <li>Friendly disposition, and overall great co-worker and addition to any office environment.</li>
 </ul>
 <h2 id="experience">Experience:</h2>
-<h3 id="yuccasoft">YuccaSoft</h3>
-<h3 id="senior-web-developer">Senior Web Developer</h3>
-<h3 id="january-2012---june-2013-august-2015---present">January 2012 - June 2013 , August 2015 - Present</h3>
+<h3 id="yuccasoft-senior-web-developer-january-2012---june-2013-august-2015---present">YuccaSoft | Senior Web Developer | January 2012 - June 2013 , August 2015 - Present</h3>
 <ul>
 <li>Coded functionality for multiple web applications in Javascript, PHP, XML, and the ModX Content Management System.</li>
 <li>Designed, coded, and maintained a single-page web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel.</li>
@@ -22,9 +20,7 @@
 <li>Implemented the Active.com golf tee-time API to build a tee-time searcher and scheduler.</li>
 <li>Focused on readability and maintainability of code.</li>
 </ul>
-<h3 id="insight-designs-web-solutions-llc.">Insight Designs Web Solutions, LLC.</h3>
-<h3 id="lamp-developer-system-administrator">LAMP Developer, System Administrator</h3>
-<h3 id="july-2014---august-2015">July 2014 - August 2015</h3>
+<h3 id="insight-designs-web-solutions-llc.-lamp-developer-system-administrator-july-2014---august-2015">Insight Designs Web Solutions, LLC. | LAMP Developer, System Administrator | July 2014 - August 2015</h3>
 <ul>
 <li>Maintained dozens of web sites and servers across multiple environments, writing custom front-end and back-end code to fulfill customer requirements.</li>
 <li>Installed, updated, maintained, and wrote custom code for Wordpress, Magento, and Drupal sites, including legacy sites with outdated codebase.</li>
@@ -32,18 +28,14 @@
 <li>Wrote custom PHP and Bash scripts to launch scheduled tasks, maintain files, solve complicated formulas, and assess security vulnerabilities.</li>
 <li>Acted as one of only a few technology experts, able to help coworkers and clients on other projects with a wide variety of technical issues.</li>
 </ul>
-<h3 id="livngiv-inc.">LivnGiv, Inc.</h3>
-<h3 id="lamp-developer-system-administrator-tech-lead">LAMP Developer, System Administrator, Tech Lead</h3>
-<h3 id="july-2013---july-2014">July 2013 - July 2014</h3>
+<h3 id="livngiv-inc.-lamp-developer-system-administrator-tech-lead-july-2013---july-2014">LivnGiv, Inc. | LAMP Developer, System Administrator, Tech Lead | July 2013 - July 2014</h3>
 <ul>
 <li>Designed and maintained features for medium-scale LAMP application across multiple load-balanced AWS instances, used by several hundred users.</li>
 <li>Acted as tech-lead, coordinating development with upper-management, and overseeing the work of two other developers.</li>
 <li>Was responsible for system and database administration, keeping servers up-to-date and secure, as well as managing periodic data back-ups and system performance.</li>
 <li>Improved-upon existing systems, including a web API that interfaced with iOS and Android mobile devices, and an employee-facing CMS for updating content easily.</li>
 </ul>
-<h3 id="lazer-bearings">Lazer Bearings</h3>
-<h3 id="co-founder">Co-founder</h3>
-<h3 id="june-2007---december-2008">June 2007 - December 2008</h3>
+<h3 id="lazer-bearings-co-founder-june-2007---december-2008">Lazer Bearings | Co-founder | June 2007 - December 2008</h3>
 <ul>
 <li>Built a skateboard-bearing business with a single other partner from the ground up, from initial conceptualization to placement in nine storefronts in the Los-Angeles area.</li>
 <li>Participated in all aspects of maintaining and operating the business, from product and packaging design, manufacturer relations, and website design; to sales, event promotion, and customer service.</li>
