Changed summary to be h2 instead of h3

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <p>310-561-4509</p>
 <p>650 Edith Way, Long Beach, CA 90807</p>
 <p>johnbrz.com</p>
-<h3 id="summary">Summary:</h3>
+<h2 id="summary">Summary:</h2>
 <ul>
 <li>Six years professional experience developing LAMP applications, managing Apache servers, and working with and within modern CMS frameworks;</li>
 <li>Excellent ability to communicate with management, engineering, and customers;</li>
@@ -42,8 +42,7 @@
 <li>Planned and promoted a large-scale promotional event, The Art of Skateboarding, with live music, art gallery, a skateboard-ramp, and ten employees, which was attended by 500 people.</li>
 </ul>
 <h2 id="education">Education:</h2>
-<h3 id="university-of-california---santa-cruz">University of California - Santa Cruz</h3>
-<h3 id="computational-mathematics-major">Computational Mathematics Major</h3>
+<h3 id="university-of-california---santa-cruz-computational-mathematics-major">University of California - Santa Cruz | Computational Mathematics Major</h3>
 <ul>
 <li>Completed third year of B.S. in Computational Mathematics, leaving school to start career.</li>
 <li>Coursework focused on problem-solving and abstract thinking.</li>
