--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,9 @@
 <h2 id="experience">Experience:</h2>
 <h3 id="yuccasoft-senior-web-developer-january-2012---june-2013-august-2015---present">YuccaSoft | Senior Web Developer | January 2012 - June 2013 , August 2015 - Present</h3>
 <ul>
+<li>Designed, coded, and maintained a single-page Angular web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel, including a custom PHP back-end API.</li>
 <li>Coded functionality for multiple web applications in Javascript, PHP, XML, and the ModX Content Management System.</li>
-<li>Designed, coded, and maintained a single-page web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel.</li>
-<li>Wrote a softball playoff-seeding calculator that integrated with existing tournament system to reduce administrative time-cost per season.</li>
+<li>Wrote a softball playoff-seeding calculator that integrated with existing tournament system to increased time-cost efficiency per season.</li>
 <li>Implemented the Active.com golf tee-time API to build a tee-time searcher and scheduler.</li>
 <li>Focused on readability and maintainability of code.</li>
 </ul>
