Resume copy changew

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <p>johnbrz.com</p>
 <h2 id="summary">Summary:</h2>
 <ul>
-<li>Six years professional experience developing LAMP applications, managing Apache servers, and working with and within modern CMS frameworks;</li>
+<li>Six years professional experience developing LAMP applications, managing Apache servers, and working with modern CMS frameworks;</li>
 <li>Excellent ability to communicate with management, engineering, and customers;</li>
 <li>Intelligent, curious, and enthusiastic problem-solver;</li>
 <li>Friendly disposition, and overall great co-worker and addition to any office environment.</li>
@@ -14,11 +14,10 @@
 <h2 id="experience">Experience:</h2>
 <h3 id="yuccasoft-senior-web-developer-january-2012---june-2013-august-2015---present">YuccaSoft | Senior Web Developer | January 2012 - June 2013 , August 2015 - Present</h3>
 <ul>
-<li>Designed, coded, and maintained a single-page Angular web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel, including a custom PHP back-end API.</li>
-<li>Coded functionality for multiple web applications in Javascript, PHP, XML, and the ModX Content Management System.</li>
-<li>Wrote a softball playoff-seeding calculator that integrated with existing tournament system to increased time-cost efficiency per season.</li>
+<li>Designed, coded, and maintained a single-page Angular web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel, including a custom API.</li>
+<li>Coded functionality for multiple LAMP applications, including using the ModX Content Management System.</li>
+<li>Wrote a softball playoff-seeding calculator that integrated with existing tournament system to increase time-cost efficiency.</li>
 <li>Implemented the Active.com golf tee-time API to build a tee-time searcher and scheduler.</li>
-<li>Focused on readability and maintainability of code.</li>
 </ul>
 <h3 id="insight-designs-web-solutions-llc.-lamp-developer-system-administrator-july-2014---august-2015">Insight Designs Web Solutions, LLC. | LAMP Developer, System Administrator | July 2014 - August 2015</h3>
 <ul>
