--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 <li>Friendly disposition, and overall great co-worker and addition to any office environment.</li>
 </ul>
 <h2 id="experience">Experience:</h2>
-<h3 id="yuccasoft-senior-web-developer-january-2012---june-2013-august-2015---present">YuccaSoft | Senior Web Developer | January 2012 - June 2013 , August 2015 - Present</h3>
+<h3 id="freelance-web-developer-january-2012---june-2013-august-2015---present">Freelance Web Developer | January 2012 - June 2013 , August 2015 - Present</h3>
 <ul>
 <li>Designed, coded, and maintained a single-page Angular web application to manage teams, update scores, and provide live results for an annual softball tournament attended by more than 400 players and personnel, including a custom API.</li>
 <li>Coded functionality for multiple LAMP applications, including using the ModX Content Management System.</li>
