--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <p>johnbrz.com</p>
 <h2 id="summary">Summary:</h2>
 <ul>
-<li>Highly motivated web developer with seven years professional experience developing LAMP applications, managing Apache servers, and working with modern CMS frameworks.</li>
+<li>Highly motivated web developer with six years professional experience developing LAMP applications, managing Apache servers, and working with modern CMS frameworks.</li>
 </ul>
 <h2 id="experience">Experience:</h2>
 <h3 id="greenlane-llc.-lead-web-developer-magento-and-shopify-april-2018---present">Greenlane, LLC. | Lead Web Developer, Magento and Shopify | April 2018 - Present</h3>
@@ -14,12 +14,13 @@
 <li>Lead Magento developer, Vapornation.com</li>
 <li>Lead Shopify developer, Vapor.com</li>
 </ul>
-<h3 id="freelance-web-developer-january-2012---june-2013-august-2015---april-2018">Freelance Web Developer | January 2012 - June 2013 , August 2015 - April 2018</h3>
+<h3 id="freelance-software-and-design-august-2015---april-2018">Freelance Software and Design | August 2015 - April 2018</h3>
 <ul>
 <li>Designed and maintained single-page Angular web application to manage teams, update scores, and provide live results for annual softball tournament attended by more than 400 players and personnel.</li>
 <li>Wrote softball playoff-seeding calculator that integrated with existing tournament system to automate tournament results.</li>
+<li>Built personal design and photography portfolios for local artists.</li>
 <li>Implemented Active.com golf tee-time RESTful API to build tee-time searcher and scheduler.</li>
-<li>Programmed customized printer functions in BASIC for label printing machines.</li>
+<li>Programmed custom label-printing functions for mobile label and sticker printers for use in the field.</li>
 </ul>
 <h3 id="insight-designs-web-solutions-llc.-lamp-developer-system-administrator-july-2014---august-2015">Insight Designs Web Solutions, LLC. | LAMP Developer, System Administrator | July 2014 - August 2015</h3>
 <ul>
@@ -31,16 +32,16 @@
 </ul>
 <h3 id="livngiv-inc.-lamp-developer-system-administrator-tech-lead-july-2013---july-2014">LivnGiv, Inc. | LAMP Developer, System Administrator, Tech Lead | July 2013 - July 2014</h3>
 <ul>
-<li>Designed and maintained features for medium-scale LAMP application across multiple load-balanced AWS instances, used by several hundred users.</li>
+<li>Designed and maintained features for medium-scale LAMP application across multiple load-balanced AWS instances, used by several thousand users.</li>
 <li>Acted as tech-lead, coordinating development with upper-management, and overseeing the work of two other developers.</li>
 <li>Assumed responsibility for system and database administration, keeping servers up-to-date and secure, as well as managing periodic data back-ups and system performance.</li>
-<li>Improved-upon existing systems, adding to API point-of-sale system that interfaced with iOS and Android mobile devices, and employee-facing CMS for updating content easily.</li>
+<li>Improved-upon existing systems, creating API point-of-sale system that interfaced with iOS and Android mobile devices, and employee-facing CMS for updating content easily.</li>
 </ul>
 <h3 id="lazer-bearings-co-founder-june-2007---december-2008">Lazer Bearings | Co-founder | June 2007 - December 2008</h3>
 <ul>
 <li>Built skateboard-bearing business with a single other partner from the ground up, from initial conceptualization to placement in nine storefronts in the Los-Angeles area.</li>
 <li>Participated in all aspects of maintaining and operating the business, from product and packaging design, manufacturer relations, and website design; to sales, event promotion, and customer service.</li>
-<li>Planned and promoted a large-scale promotional event, The Art of Skateboarding, with live music, art gallery, a skateboard-ramp, and ten employees, which was attended by over 500 people.</li>
+<li>Planned and promoted promotional event, The Art of Skateboarding, with live music, art gallery, skateboard-ramp, and twenty employees, which was attended by over 500 people.</li>
 </ul>
 <h2 id="education">Education:</h2>
 <h3 id="university-of-california---santa-cruz-computational-mathematics-major">University of California - Santa Cruz | Computational Mathematics Major</h3>
@@ -51,12 +52,11 @@
 </ul>
 <h2 id="skills-interests">Skills / Interests:</h2>
 <ul>
-<li>Back-end: Linux, Apache, MySQL, PHP, Git, Bash, Wordpress, Magento, Drupal</li>
-<li>Front-end: HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks, Smarty PHP Templating, Angular</li>
+<li>Back-end: Linux, Apache, MySQL, PHP, Git, Bash, Node, Wordpress, Magento, Drupal.</li>
+<li>Front-end: Angular, HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks.</li>
 <li>Over 10 years of hobby experience in web development prior to starting career.</li>
 <li>Over 10 years of Linux use, including Bash shell scripting, server/database administration, managing virtual machines, and general troubleshooting.</li>
-<li>Fond interest in Math and Computer Science.</li>
 <li>Codility Silver Certificate holder and Project Euler member.</li>
-<li>Enjoys composing and performing music.</li>
-<li>Conversational Polish speaker</li>
+<li>Enjoys playing in rock and roll bands and shooting hoops.</li>
+<li>Conversational Polish speaker.</li>
 </ul>
