Updated school information and years worked

--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,14 @@
 <h2 id="web-developer">Web Developer</h2>
 <p>johnbrz@gmail.com</p>
 <p>310-561-4509</p>
-<p>650 Edith Way, Long Beach, CA 90807</p>
+<p>San Francisco, CA</p>
 <p>johnbrz.com</p>
 <h2 id="summary">Summary:</h2>
 <ul>
-<li>Highly motivated web developer with six years professional experience developing LAMP applications, managing Apache servers, and working with modern CMS frameworks.</li>
+<li>Highly motivated web developer with eight years professional experience developing LAMP applications, managing Apache servers, and working with modern CMS frameworks.</li>
 </ul>
 <h2 id="experience">Experience:</h2>
-<h3 id="greenlane-llc.-lead-web-developer-magento-and-shopify-april-2018---present">Greenlane, LLC. | Lead Web Developer, Magento and Shopify | April 2018 - Present</h3>
+<h3 id="greenlane-llc.-lead-web-developer-magento-and-shopify-april-2018---april-2020">Greenlane, LLC. | Lead Web Developer, Magento and Shopify | April 2018 - April 2020</h3>
 <ul>
 <li>Lead Magento developer, Vapornation.com</li>
 <li>Lead Shopify developer, Vapor.com</li>
@@ -44,18 +44,16 @@
 <li>Planned and promoted promotional event, The Art of Skateboarding, with live music, art gallery, skateboard-ramp, and twenty employees, which was attended by over 500 people.</li>
 </ul>
 <h2 id="education">Education:</h2>
-<h3 id="university-of-california---santa-cruz-computational-mathematics-major">University of California - Santa Cruz | Computational Mathematics Major</h3>
+<h3 id="university-of-california---santa-cruz-b.a.-pure-mathematics">University of California - Santa Cruz | B.A. Pure Mathematics</h3>
 <ul>
-<li>Completed third year of B.S. in Computational Mathematics, leaving school to start career.</li>
 <li>Coursework focused on problem-solving and abstract thinking.</li>
-<li>Relevant Courses: Programming in Java, Multi-variable Calculus, Advanced Linear Algebra, Real Analysis, Proofs and Problem-solving.</li>
+<li>Relevant Courses: Programming in Java, Programming in Python, Mathematical Problem Solving, Linear Algebra, Ordinary Differential Equations, Vector Calculus, Complex Analysis, Number Theory, Proofs and Problem-solving.</li>
 </ul>
 <h2 id="skills-interests">Skills / Interests:</h2>
 <ul>
 <li>Back-end: Linux, Apache, MySQL, PHP, Git, Bash, Node, Wordpress, Magento, Drupal.</li>
-<li>Front-end: Angular, HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks.</li>
-<li>Over 10 years of hobby experience in web development prior to starting career.</li>
-<li>Over 10 years of Linux use, including Bash shell scripting, server/database administration, managing virtual machines, and general troubleshooting.</li>
+<li>Front-end: Angular, HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks. starting career.</li>
+<li>Over a decade experience using Linux, including Bash shell scripting, server/database administration, managing virtual machines, and general troubleshooting.</li>
 <li>Codility Silver Certificate holder and Project Euler member.</li>
 <li>Enjoys playing in rock and roll bands and shooting hoops.</li>
 <li>Conversational Polish speaker.</li>
