--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
 <h2 id="skills-interests">Skills / Interests:</h2>
 <ul>
 <li>Back-end: Linux, Apache, MySQL, PHP, Git, Bash, Node, Wordpress, Magento, Drupal.</li>
-<li>Front-end: Angular, HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks. starting career.</li>
+<li>Front-end: Angular, HTML5/CSS3, Javascript/jQuery, Foundation/Bootstrap responsive frameworks.</li>
 <li>Over a decade experience using Linux, including Bash shell scripting, server/database administration, managing virtual machines, and general troubleshooting.</li>
 <li>Codility Silver Certificate holder and Project Euler member.</li>
 <li>Enjoys playing in rock and roll bands and shooting hoops.</li>
